// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`passwordless actions login() calls webApi.passwordlessVerify() with email options 1`] = `
Array [
  "id",
  Object {
    "auth": "params",
    "connection": "email",
    "email": "email",
    "verificationCode": "vcode",
  },
  [Function],
]
`;

exports[`passwordless actions login() calls webApi.passwordlessVerify() with sms options 1`] = `
Array [
  "id",
  Object {
    "auth": "params",
    "connection": "sms",
    "phoneNumber": "phoneNumberWithDiallingCode",
    "verificationCode": "vcode",
  },
  [Function],
]
`;

exports[`passwordless actions login() on webApi.passwordlessVerify() callback calls logInSuccess on success 1`] = `
Array [
  "id",
  Object {
    "result": true,
  },
]
`;

exports[`passwordless actions login() on webApi.passwordlessVerify() callback formats error when there is an error  1`] = `
Array [
  "updateEntity",
  "lock",
  "id",
  [Function],
  true,
]
`;

exports[`passwordless actions login() on webApi.passwordlessVerify() callback formats error when there is an error  2`] = `
Array [
  "updateEntity",
  "lock",
  "id",
  [Function],
  false,
  "error,passwordless,some_error_code",
]
`;

exports[`passwordless actions login() sets setSubmitting to true 1`] = `
Array [
  "getEntity",
  "lock",
  "id",
]
`;

exports[`passwordless actions login() sets setSubmitting to true 2`] = `
Array [
  "updateEntity",
  "lock",
  "id",
  [Function],
  true,
]
`;

exports[`passwordless actions requestPasswordlessEmail() calls setPasswordlessStarted() on success 1`] = `
Array [
  "updateEntity",
  "lock",
  "id",
  [Function],
]
`;

exports[`passwordless actions requestPasswordlessEmail() calls setPasswordlessStarted() on success 2`] = `
Array [
  "model",
  false,
]
`;

exports[`passwordless actions requestPasswordlessEmail() calls setPasswordlessStarted() on success 3`] = `
Array [
  "model",
  true,
]
`;

exports[`passwordless actions requestPasswordlessEmail() calls startPasswordless 1`] = `
Array [
  "id",
  Object {
    "connection": "email",
    "email": "email",
    "send": "send",
  },
  [Function],
]
`;

exports[`passwordless actions requestPasswordlessEmail() calls validateAndSubmit() 1`] = `
Array [
  "id",
  Array [
    "email",
  ],
  [Function],
]
`;

exports[`passwordless actions requestPasswordlessEmail() normalizes the error message with a generic error 1`] = `
Array [
  "getEntity",
  "lock",
  "id",
]
`;

exports[`passwordless actions requestPasswordlessEmail() normalizes the error message with a generic error 2`] = `
Array [
  "updateEntity",
  "lock",
  "id",
  [Function],
  false,
  "error,passwordless,some_error_code",
]
`;

exports[`passwordless actions requestPasswordlessEmail() normalizes the error message with a sms_provider_error error and description includes (Code: 21211) 1`] = `
Array [
  "updateEntity",
  "lock",
  "id",
  [Function],
  false,
  "error,passwordless,bad.phone_number",
]
`;

exports[`passwordless actions resendEmail() calls setResendFailed on error 1`] = `
Array [
  "getEntity",
  "lock",
  "id",
]
`;

exports[`passwordless actions resendEmail() calls setResendFailed on error 2`] = `
Array [
  "updateEntity",
  "lock",
  "id",
  "resend",
]
`;

exports[`passwordless actions resendEmail() calls setResendFailed on error 3`] = `
Array [
  "model",
]
`;

exports[`passwordless actions resendEmail() calls setResendSuccess() on success 1`] = `
Array [
  "getEntity",
  "lock",
  "id",
]
`;

exports[`passwordless actions resendEmail() calls setResendSuccess() on success 2`] = `
Array [
  "updateEntity",
  "lock",
  "id",
  "resend",
]
`;

exports[`passwordless actions resendEmail() calls setResendSuccess() on success 3`] = `
Array [
  "model",
]
`;

exports[`passwordless actions restart calls restartPasswordless 1`] = `
Array [
  "updateEntity",
  "lock",
  "id",
  [Function],
]
`;

exports[`passwordless actions sendSMS() calls setPasswordlessStarted() on success 1`] = `
Array [
  "updateEntity",
  "lock",
  "id",
  [Function],
]
`;

exports[`passwordless actions sendSMS() calls setPasswordlessStarted() on success 2`] = `
Array [
  "model",
  false,
]
`;

exports[`passwordless actions sendSMS() calls setPasswordlessStarted() on success 3`] = `
Array [
  "model",
  true,
]
`;

exports[`passwordless actions sendSMS() calls startPasswordless 1`] = `
Array [
  "id",
  Object {
    "connection": "sms",
    "phoneNumber": "phoneNumberWithDiallingCode",
    "send": "send",
  },
  [Function],
]
`;

exports[`passwordless actions sendSMS() calls validateAndSubmit() 1`] = `
Array [
  "id",
  Array [
    "phoneNumber",
  ],
  [Function],
]
`;

exports[`passwordless actions sendSMS() normalizes the error message with a generic error 1`] = `
Array [
  "getEntity",
  "lock",
  "id",
]
`;

exports[`passwordless actions sendSMS() normalizes the error message with a generic error 2`] = `
Array [
  "updateEntity",
  "lock",
  "id",
  [Function],
  false,
  "error,passwordless,some_error_code",
]
`;

exports[`passwordless actions sendSMS() normalizes the error message with a sms_provider_error error and description includes (Code: 21211) 1`] = `
Array [
  "updateEntity",
  "lock",
  "id",
  [Function],
  false,
  "error,passwordless,bad.phone_number",
]
`;

exports[`passwordless actions toggleTermsAcceptance() calls internalToggleTermsAcceptance() 1`] = `
Array [
  "updateEntity",
  "lock",
  "id",
  [Function],
]
`;

exports[`passwordless actions toggleTermsAcceptance() calls internalToggleTermsAcceptance() 2`] = `
Array [
  "model",
]
`;
